# Project_Manager

./: README.md  pyproject.toml
project_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
project_manager/core/: database.py
project_manager/models/: enums.py  project.py  user.py
project_manager/views/: CLI.py
