[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-manager"
version = "0.1.0"
description = "CLI para gestionar proyectos"
authors = [
  { name = "Carlos Estrada" }
]
dependencies = [
  "click"
]

[project.scripts]
proman = "project_manager.CLI:cli"
